Fix even more layout issues 😕

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 3rem;
   align-items: center;
 }
 
@@ -226,7 +227,6 @@ ul {
 }
 
 .service__content {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -379,6 +379,10 @@ ul {
     font-size: 55%;
   }
 
+  .header {
+    height: 70vh;
+  }
+
   /* ------------------ Header Section -------------------- */
   .header {
     background-image: url("/images/desktop/image-header.jpg");
@@ -527,7 +531,6 @@ ul {
   }
 
   .testimonials-container {
-    border: 1px solid crimson;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
   }
@@ -552,6 +555,11 @@ ul {
 
   html {
     font-size: 65%;
+  }
+
+  .header {
+    gap: 1rem;
+    height: 70vh;
   }
 
   .service {
@@ -608,6 +616,10 @@ ul {
 @media (min-width: 1140px) {
   html {
     font-size: 75%;
+  }
+
+  .header {
+    gap: 8rem;
   }
 
   .nav__link {
